# DataProcessingPlatform

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  index.html  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js  vite.config.vercel.js
assets/Components/: JobCard.jsx  JobErrorAlert.jsx  ProcessedInfoCard.jsx
assets/Page/: Main.jsx
assets/Sections/: CurrentJobs.jsx  JobStatus.jsx  NewJob.jsx  ResultPreview.jsx
assets/api/: jobs.js
assets/js/: hello.jsx  index.js
assets/utils/: format.js
jobs/: llm.py  models.py  regex_cache.py  s3_utils.py  spark_progress.py  tasks.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
processing_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/js/: index-bundle.js
templates/: Main.html  hello_vite.html
