[project]
name = "processingplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-vite>=3.1.0",
    "djangorestframework>=3.17.1",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyspark==3.5.4",
    "redis>=8.0.1",
]
